<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="650dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pavadinimas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pavadinimas" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/pavadinimas2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fakultetas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fakultetas" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fakultetas2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sudetingumas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudetingumas" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="177dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="145dp">

            <TextView
                android:id="@+id/diena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diena" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/laikas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laikas" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registruotis" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/saugotiButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saugoti" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>